<resources>
    <string name="app_name">SpaceX</string>
    <string name="loading">Loading… </string>
    <string name="failed1">Loading the data failed.</string>
    <string name="failed2">Please check your connection.</string>
    <string name="test">Testing mode is on. Test string and random number:</string>

    <string name="mission">Mission:</string>
    <string name="launch_time">Launch time:</string>
    <string name="spacecraft">Spacecraft:</string>
    <string name="base">Ground base:</string>
    <string name="payloads">Payloads:</string>

    <string name="payload_nr">"Payload "</string>
    <string name="payload_name">Payload name:</string>
    <string name="nationality">Nationality:</string>
    <string name="manufacturer">Manufacturer:</string>
    <string name="payload_mass">Payload mass(kg):</string>
    <string name="orbit_type">Orbit type:</string>
    <string name="type">Type:</string>
    <string name="regime">Regime:</string>
    <string name="customers">Customers:</string>
    <string name="description">Description:</string>

    <string name="showfull">Show all data</string>

    <string name="longtest">dkljhafdalkfhasjfhsdklfhasdklhfsdjklfhsdjklafhklajhdfklasjfhklsjfhsdkljhfakldjsfha</string>
    <string name="latei">@string/loading</string>
    <string name="title_activity_dualdetails">dualdetails</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_dual">DualActivity</string>

</resources>
