<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/missionsignf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/mission"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/missionnamef" />

    <TextView
        android:id="@+id/missionnamef"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/latei"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/barrierf"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/spacecraftsignf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spacecraft"
        app:layout_constraintStart_toStartOf="@+id/timesignf"
        app:layout_constraintTop_toTopOf="@+id/rocketnamef" />

    <TextView
        android:id="@+id/rocketnamef"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/latei"
        app:layout_constraintEnd_toEndOf="@+id/datetimef"
        app:layout_constraintStart_toStartOf="@+id/datetimef"
        app:layout_constraintTop_toBottomOf="@+id/datetimef" />

    <TextView
        android:id="@+id/launchlocationf"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:singleLine="false"
        android:text="@string/latei"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/rocketnamef"
        app:layout_constraintStart_toStartOf="@+id/rocketnamef"
        app:layout_constraintTop_toBottomOf="@+id/rocketnamef" />

    <TextView
        android:id="@+id/basesignf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/base"
        app:layout_constraintStart_toStartOf="@+id/spacecraftsignf"
        app:layout_constraintTop_toTopOf="@+id/launchlocationf" />

    <TextView
        android:id="@+id/timesignf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/launch_time"
        app:layout_constraintStart_toStartOf="@+id/missionsignf"
        app:layout_constraintTop_toTopOf="@+id/datetimef" />

    <TextView
        android:id="@+id/datetimef"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/latei"
        app:layout_constraintEnd_toEndOf="@+id/missionnamef"
        app:layout_constraintStart_toStartOf="@+id/missionnamef"
        app:layout_constraintTop_toBottomOf="@+id/missionnamef" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="right"
        app:constraint_referenced_ids="timesignf,basesignf,missionsignf,spacecraftsignf"
        tools:layout_editor_absoluteX="91dp" />
</androidx.constraintlayout.widget.ConstraintLayout>