<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/basesign5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/base"
            app:layout_constraintStart_toStartOf="@+id/spacecraftsign5"
            app:layout_constraintTop_toBottomOf="@+id/spacecraftsign5" />

        <TextView
            android:id="@+id/missionsign5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/mission"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/spacecraftsign5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/spacecraft"
            app:layout_constraintStart_toStartOf="@+id/timesign5"
            app:layout_constraintTop_toBottomOf="@+id/timesign5" />

        <TextView
            android:id="@+id/payloadssign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/payloads"
            app:layout_constraintStart_toStartOf="@+id/basesign5"
            app:layout_constraintTop_toBottomOf="@+id/basesign5" />

        <TextView
            android:id="@+id/timesign5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/launch_time"
            app:layout_constraintStart_toStartOf="@+id/missionsign5"
            app:layout_constraintTop_toBottomOf="@+id/missionsign5" />

        <TextView
            android:id="@+id/missionname5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:maxLines="1"
            android:text="@string/latei"
            app:layout_constraintStart_toEndOf="@+id/barrier5"
            app:layout_constraintTop_toTopOf="@+id/missionsign5" />

        <TextView
            android:id="@+id/datetime5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latei"
            app:layout_constraintStart_toStartOf="@+id/missionname5"
            app:layout_constraintTop_toTopOf="@+id/timesign5" />

        <TextView
            android:id="@+id/rocketname5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latei"
            app:layout_constraintStart_toStartOf="@+id/datetime5"
            app:layout_constraintTop_toTopOf="@+id/spacecraftsign5" />

        <TextView
            android:id="@+id/launchlocation5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/latei"
            app:layout_constraintStart_toStartOf="@+id/rocketname5"
            app:layout_constraintTop_toTopOf="@+id/basesign5" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="right"
            app:constraint_referenced_ids="missionsign5,basesign5,spacecraftsign5,timesign5,payloadssign"
            tools:layout_editor_absoluteX="411dp"
            tools:layout_editor_absoluteY="108dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/payloadsrv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:isScrollContainer="false"
            android:overScrollMode="never"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/payloadssign"
            app:layout_constraintTop_toBottomOf="@+id/payloadssign" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

